--- a/index.html
+++ b/index.html
@@ -1,5 +1,48 @@
 <! doctype html/>
 <html>
-<head></head>
+<head>
+  <title>My Layout Index</title>
+  <link rel="stylesheet" href="./styles/mycss.css">
+</head>
+
+<body>
+  <div id="wrapper"
+<header>
+    <h1>My Page</h1>
+</header>
+<div id="content"
+<nav>
+    <ul>
+        <li>link 1</li>
+        <li>link 2</li>
+        <li>link 3</li>
+    </ul>
+</nav>
+<article>
+    <header>
+        <h1>Article Headline</h1>
+    </header>
+    <section>
+        <p>This is my article copy</p>
+    </section>
+    
+    <footer>
+        <p>Article Footer</p>
+    </footer>
+</article>
+
+<aside>
+     <ul>
+        <li>link 1</li>
+        <li>link 2</li>
+        <li>link 3</li>
+    </ul>
+</aside>
+</div>
+<footer>
+    <p>Page Footer</p>
+</footer>
+</div>
+</body>
 
 </html>
